--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,9 @@
 body {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 13px;
+    overflow-x: hidden;
 }
+
 header {
     height: 100px;
     background-color: #000000;
@@ -18,7 +20,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
- 
+
     margin: auto;
     max-width: 1140px;
     height: 100px;
@@ -39,39 +41,45 @@ header {
     justify-content: flex-end;
 }
 
-.menu ul, .menu li {
+.menu ul,
+.menu li {
     list-style: none;
     display: flex;
 }
 
-.menu li a { 
+.menu li a {
+    text-transform: uppercase;
     color: #FFFFFF;
     text-decoration: none;
     font-weight: 600;
     padding: 0 10px;
-    height: 100px; 
+    height: 100px;
     display: flex;
     align-items: center;
     border-bottom: 5px solid #000000;
 
 }
 
-.menu li a:hover, .menu .active a {
+.menu li a:hover,
+.menu .active a {
     border-bottom: 5px solid #B28756;
     color: #CCCCCC;
 }
 
- main .banner {
-    height: calc(100vh - 100px); /*100px do header*/
+main .banner {
+    height: calc(100vh - 100px);
+    /*100px do header*/
     background-color: #333333;
     background-image: url(../images/backgrounds/bg.jpg);
     background-size: cover;
     background-position: bottom;
-    overflow: hidden; /*esconde tudo o que passar (remove as barras de rolagem)*/
+    overflow: hidden;
+    /*esconde tudo o que passar (remove as barras de rolagem)*/
 }
 
 .banner .sliders {
-    width: 1000vw;/*suporte para 10 slides*/
+    width: 1000vw;
+    /*suporte para 10 slides*/
     height: 100%;
 }
 
@@ -79,7 +87,7 @@ header {
     width: 100vw;
     height: 100%;
     display: inline-block;
-    background-color: rgba(0,0,0, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .banner .slideArea {
@@ -92,17 +100,20 @@ header {
 }
 
 .banner .slideArea h1 {
+    text-transform: uppercase;
     font-size: 50px;
     font-weight: bold;
 }
 
 .banner h1 span {
+    text-transform: uppercase;
     color: #B28756;
     display: flex;
     justify-content: center;
 }
 
 .banner h2 {
+    text-transform: uppercase;
     margin-top: 20px;
 }
 
@@ -137,6 +148,51 @@ header {
     cursor: pointer;
 }
 
-.banner .pointer.active { /*se tiver as 2 classes aplica os efetios*/
+.banner .pointer.active {
+    /*se tiver as 2 classes aplica os efetios*/
     background-color: #B28756;
 }
+
+.default {
+    padding: 50px 0;
+}
+    
+.default .sectionTitle, .default .sectionDesc {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.default .sectionTitle {
+    font-size: 20px;
+}
+
+.default .sectionDesc {
+    font-size: 13px;
+    color: #CCCCCC;
+    margin: 10px 0 40px 0;
+}
+
+.default .sectionBody {
+    max-width: 1140px;
+    margin: auto;
+    min-height: 100px;
+    background-color: #CCCCCC;
+}
+
+.default.light {
+    background-color: #F7F7F7;
+}
+
+.default.light .sectionTitle {
+    color: #000000;
+}
+
+.default.dark {
+    background-color: #000000;
+}
+
+.default.dark .sectionTitle {
+    color: #F7F7F7;
+}
+
