--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,18 @@ header {
     color: #CCCCCC;
 }
 
+.button {
+    display: inline-block;
+    background-color: #B28756;
+    color: #FFFFFF;
+    font-size: 12px;
+    font-weight: 600;
+    padding: 10px 30px;
+    text-decoration: none;
+    margin-top: 30px;
+    border-radius: 20px;
+}
+
 main .banner {
     height: calc(100vh - 100px);
     /*100px do header*/
@@ -117,18 +129,6 @@ main .banner {
     margin-top: 20px;
 }
 
-.banner a {
-    display: block;
-    background-color: #B28756;
-    color: #FFFFFF;
-    font-size: 12px;
-    font-weight: 600;
-    padding: 10px 30px;
-    text-decoration: none;
-    margin-top: 30px;
-    border-radius: 20px;
-}
-
 .banner .slidersPointers {
     width: 100vw;
     height: 20px;
@@ -176,15 +176,13 @@ main .banner {
 .default .sectionBody {
     max-width: 1140px;
     margin: auto;
-    min-height: 100px;
-    background-color: #CCCCCC;
 }
 
 .default.light {
     background-color: #F7F7F7;
 }
 
-.default.light .sectionTitle {
+.default.light .sectionTitle, .default.light .sectionBody {
     color: #000000;
 }
 
@@ -192,7 +190,31 @@ main .banner {
     background-color: #000000;
 }
 
-.default.dark .sectionTitle {
+.default.dark .sectionTitle, .default.dark .sectionBody {
     color: #F7F7F7;
 }
 
+/*ÁREAS ESPECÍFICAS*/
+
+.section-about-us {
+    display: flex;
+}
+
+.section-about-us--left {
+    flex: 1;
+}
+
+.section-about-us--left p {
+    font-size: 14px;
+    line-height: 25px;
+}
+
+.section-about-us--right {
+    width: 520px;
+    text-align: center;
+}
+
+.section-about-us--right img{
+    width: 480px;
+    box-shadow: 0px 5px 10px #000000;
+}
