--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,3 +218,31 @@ main .banner {
     width: 480px;
     box-shadow: 0px 5px 10px #000000;
 }
+
+.section-services {
+    display: flex;
+    align-items: center;
+}
+
+.section-service {
+    flex: 1;
+    text-align: center;
+    border-right: 1px solid #333333;
+    padding: 15px;
+}
+
+.section-service:nth-child(1) {
+    border-left: 1px solid #333333;
+}
+
+.section-service h4 {
+    margin-top: 20px;
+    text-transform: uppercase;
+    font-size: 18px;
+}
+
+.section-service p {
+    margin-top: 10px;
+    font-size: 13px;
+    color: #999999;
+}
