--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,3 +246,95 @@ main .banner {
     font-size: 13px;
     color: #999999;
 }
+
+.section-projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-projects--filters {
+    border: 1px solid #333333;
+    background-color: #EEEEEE;
+    border-radius: 30px;
+    display: inline-block; /*Reduz o tamanho do menu*/
+    padding: 0px 20px;
+    margin: auto;
+}
+
+.section-projects--filters ul, .section-projects--filters li {
+    list-style: none;
+}
+
+.section-projects--filters li {
+    display: inline-block;
+    padding: 10px;
+    text-transform: uppercase;
+    font-size: 13px;
+    border-left: 2px solid #CCCCCC;
+    color: #555555;
+    border-bottom: 5px solid #EEEEEE;
+    cursor: pointer;
+}
+
+.section-projects--filters li:hover, .section-projects--filters li.active {
+    border-bottom: 5px solid #B28756;
+}
+
+.section-projects--filters li:first-child {
+    border-left: 0;
+}
+
+.section-projects--photos {
+    width: 100vw;
+    max-width: 1140px;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-projects--photo {
+    width: 280px;
+}
+
+.section-projects--photoarea {
+    margin: 10px;
+    width: 260px;
+    height: 160px;
+}
+
+.section-projects--photoarea img { 
+    width: inherit;
+    height: inherit;
+}
+
+.section-projects--photoinfo {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: inherit;
+    height: inherit;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    display: none;
+} 
+
+.section-projects--photoinfo h5 {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.section-projects--photoinfo p {
+    margin-top: 5px;
+    text-align: center;
+}
+
+.section-projects--photoarea:hover .section-projects--photoinfo {
+    display: flex;
+    cursor: pointer;
+}
+
