--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,10 @@ header {
     height: 80px;
 }
 
+.menu-opener {
+    display: none;
+}
+
 .menu {
     flex: 1;
     display: flex;
@@ -197,13 +201,13 @@ main .banner {
 }
 
 footer {
-    background-color:#000;
+    background-color:#000000;
     padding:20px;
 }
 .footer--area {
     max-width:1140px;
     margin:auto;
-    color:#FFF;
+    color:#FFFFFF;
     display:flex;
 }
 .footer--item {
@@ -216,7 +220,7 @@ footer {
     display:block;
     width:25px;
     height:25px;
-    background-color:#333;
+    background-color:#333333;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -230,14 +234,14 @@ footer {
     height:10px;
 }
 .footer--item.area2 {
-    color:#999;
+    color:#999999;
     line-height:20px;
     font-size:13px;
     padding:0 30px;
     text-align: justify;
 }
 .footer--item.area3 form {
-    background-color:#333;
+    background-color:#333333;
     text-align:center;
     padding:30px;
 }
@@ -246,9 +250,9 @@ footer {
     height:40px;
     border:0;
     background:transparent;
-    border-bottom:1px solid #CCC;
+    border-bottom:1px solid #CCCCCC;
     outline:0;
-    color:#FFF;
+    color:#FFFFFF;
     font-size:14px;
     text-align:center;
 }
@@ -857,3 +861,128 @@ footer {
     justify-content: center;
 }
 
+/*RESPONSIVIDADE*/
+
+@media (min-width: 450px) and (max-width: 820px) {
+    nav {
+        display: none;
+        position: absolute;
+        z-index: 999;
+        background-color: rgba(0, 0, 0, 0.9);
+        width: 60vw;
+        height: calc(100vh - 100px);
+        top: 100px;
+        right: 0;
+    }
+    
+    .logo {
+        margin-left: 15px;
+    }
+
+    .logo img {
+        width: 100px;
+        height: 100px;
+    }
+
+    .menu-opener {
+        width: 40px;
+        margin-right: 30px;
+        display: block;
+    }
+
+    .menu ul {
+        flex-direction: column;
+    }
+
+    .menu li a {
+        height: 80px;
+        font-size: 25px;
+        font-weight: bold;
+        margin-left: 50px;
+        border: none;
+    }
+
+    .menu li a:hover {
+        border: none;
+    }
+
+    .menu li.active a {
+        border: none;
+        color: #B28756;
+    }
+
+    .default.light .sectionTitle, .default.dark .sectionTitle{
+        font-size: 30px;
+    }
+
+    .default.light .sectionDesc, .default.dark .sectionDesc{
+        font-size: 17px;
+    }
+
+    .section-about-us {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 20px 30px;
+    }
+
+    .section-about-us--left p {
+        text-align: justify;
+        font-size: 17px;
+    }
+    .section-about-us--left p a{
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 150px;
+        margin: 20px auto;
+    }
+
+    .section-about-us--right {
+        margin: 20px 0 0 0;
+
+    }
+
+    .section-services {
+        flex-wrap: wrap;
+    }
+
+    .section-service {
+        min-width: 50%;
+        margin-bottom: 30px;
+    }
+
+    .section-service:first-child {
+        border: none;
+    }
+
+    .section-team {
+        max-width: 580px;
+    }
+
+    .section-facts {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .section-fact {
+        min-width: 50%;
+    }
+
+    .section-fact h4 {
+        font-size: 16px;
+    }
+
+    .section-map--info {       
+        width: auto;
+        margin: 25px 60px;
+    }
+    .section-map--info-item {
+        margin-bottom: 20px;
+    }
+
+    .footer--item area2 {
+        font-size: 17px;
+    }
+}
